--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,9 @@ out/barbara/*
 out/BoatsColor/*
 out/goldhill/*
 out/lena_color/*
+out/*.bmp
 
-gcc_image_processer
 icx_image_processer
+icx_image_processer_release
+gcc_image_processer
+gcc_image_processer_release
